# tt_cyclopedia_back

./: .README  .env  .gitignore  Docker_commands.txt  Dockerfile  README.md  TEST_FIXES_SUMMARY.txt  alembic.ini  check_environment.py  check_linting.py  delete_prod_mongo_data.py  docker-compose.yml  docker-compose.yml.backup  env.example  init_db.py  main.py  migrate_images_to_cloudinary.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_app.py  run_ci_tests.py  run_tests.sh  setup-test-db.sh  test.db  test.db-journal  test_cloudinary.py  test_main.py
.github/workflows/: ci_cd_pipeline.yml
alembic/: env.py
alembic/versions/: 8d19ec2e2187_initial.py
app/: main.py  test_main.py
app/auth/: dependencies.py  jwt_handler.py
app/config/: cloudinary_config.py  db_init.py  environment.py  image_config.py  mongo_config.py  postgres_config.py  test_config.py
app/middleware/: log_to_mongo.py
app/migrations/: env.py
app/migrations/versions/: 0001_create_schema.py  17c5bb3d8f46_add_forum_likes_and_comments_tables.py  5face0d7b746_initial.py  6d16eab1155c_add_post_likes_table_for_post_like_.py  80636840419f_add_comment_likes_table.py  87b3e4212126_sync_models.py  a4b6e607df90_add_stats_column_to_posts.py  add_forum_id_to_comments.py  e04e3f44ac14_add_comment_likes_table.py  e25d20f5644c_merge_schema_and_forum_id_branches.py
app/routers/comments/: comments.py  models.py  schemas.py
app/tests/: README.md  conftest.py  run_tests.py  test_comments.py  test_fast.py  test_forums.py  test_posts.py  test_users.py
routers/posts/: posts.py
routers/users/: users.py
tests/: test_posts.py  test_users.py
(+12 files in other folders)
